fix(team-selector) add z-index

--- a/components/team-selector/team-selector.less
+++ b/components/team-selector/team-selector.less
@@ -3,6 +3,7 @@
 .team-selector {
 	display: flex;
 	position: relative;
+	z-index: @layer-raised;
 	width: auto;
 	height: 70px;
 	margin: -@spacing-default*8.5 @spacing-default*1.5 @spacing-default*3 @spacing-default*1.5;
